changed button color

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
             <div class="col-sm-12 col-md-3 justify-content-end">
                 <h2>Welcome</h2>
                 <p>The one-stop destination for buying, selling, and exploring fashion.</p>
-                <a href="/products" target="_blank" class="btn btn-success">Start Shopping &raquo;</a>
+                <a href="/products" target="_blank" class="btn btn-primary">Start Shopping &raquo;</a>
             </div>
             <div class = "col-sm-12 col-md-2 justify-content-end"></div>
             <div class = "col-sm-12 col-md-2 justify-content-end">
