--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,11 +24,11 @@
     <hr>
         <div class="container-fluid">
             <div class="row align-items-center h-100">
-                <div class = 'col-sm-12 col-md-4'><h4 class="text-center">Men's</h4><img class="img-thumbnail" src="https://d1jsygvae9sbou.cloudfront.net/images/origin/medium_2_3222cb71ed.jpg" alt="Clothes A">
+                <div class = 'col-sm-12 col-md-4'><h4 class="text-center">Men's</h4><a href="/products/mensware"><img class="img-thumbnail" src="https://d1jsygvae9sbou.cloudfront.net/images/origin/medium_2_3222cb71ed.jpg" alt="Clothes A"></a>
                 </div>
-                <div class = 'col-sm-12 col-md-4'><h4 class="text-center">Women's</h4><img class="img-thumbnail" src="https://i.pinimg.com/736x/5a/ae/f2/5aaef2c17e97c1d159a8fc92274dfbe5.jpg" alt="Clothes B">
+                <div class = 'col-sm-12 col-md-4'><h4 class="text-center">Women's</h4><a href="/products/womensware"><img class="img-thumbnail" src="https://i.pinimg.com/736x/5a/ae/f2/5aaef2c17e97c1d159a8fc92274dfbe5.jpg" alt="Clothes B"></a>
                 </div>
-                <div class = 'col-sm-12 col-md-4'><h4 class="text-center">Jewelry</h4><img class="https://i.pinimg.com/736x/5c/62/9f/5c629f4c330252decbd396f6ebb2f2e3.jpg" alt="Clothes C">
+                <div class = 'col-sm-12 col-md-4'><h4 class="text-center">Shoes</h4><img class="img-thumbnail" src="https://i.pinimg.com/736x/5c/62/9f/5c629f4c330252decbd396f6ebb2f2e3.jpg" alt="Clothes C">
                 </div> 
         </div>
     </div>
