--- a/views/products/useritems.ejs
+++ b/views/products/useritems.ejs
@@ -3,7 +3,7 @@
     <%- include('../partials/head.ejs') %>
 <body>
     <%- include('../partials/nav.ejs') %>
-    <center><h1>User's Products</h1></center>
+    <h1>User's Products</h1>
     <div class = 'container-fluid' id="pics">
         <div class="row justify-content-start flex-wrap">
         <% for(let i = 0; i < Product.length; i++ ) { %>
