--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -3,7 +3,7 @@
     <%- include('../partials/head.ejs') %>
 <body>
     <%- include('../partials/nav.ejs') %>
-    <center><h1>All Products</h1></center>
+    <h1>All Products</h1>
     <div class = 'directory-path'>
         <a href = '/'>Home</a>
     </div>
