--- a/views/products/mensware/bottoms/menbottoms.ejs
+++ b/views/products/mensware/bottoms/menbottoms.ejs
@@ -3,7 +3,7 @@
     <%- include('../../../partials/head.ejs') %>
 <body>
     <%- include('../../../partials/nav.ejs') %>
-    <center><h1>Men's Bottoms</h1></center>
+    <h1>Men's Bottoms</h1>
     <div class = 'directory-path'>
         <a href = '/'>Home</a> > <a href = '/products/mensware'>Mensware</a> > Bottoms
     </div>
