--- a/views/products/mensware/mensware.ejs
+++ b/views/products/mensware/mensware.ejs
@@ -3,7 +3,7 @@
     <%- include('../../partials/head.ejs') %>
 <body>
     <%- include('../../partials/nav.ejs') %>
-    <center><h1>Men's Clothing</h1></center>
+    <h1>Men's Clothing</h1>
     <div class = 'directory-path'>
         <a href = '/'>Home</a> > <a href = '/products/mensware'>Mensware</a>
     </div>
