--- a/views/products/womensware/tops/womenstops.ejs
+++ b/views/products/womensware/tops/womenstops.ejs
@@ -3,7 +3,7 @@
     <%- include('../../../partials/head.ejs') %>
 <body>
     <%- include('../../../partials/nav.ejs') %>
-    <center><h1>Women's Tops</h1></center>
+    <h1>Women's Tops</h1>
     <div class = 'directory-path'>
         <a href = '/'>Home</a> > <a href = '/products/womensware'>Womensware</a> > Tops
     </div>
