--- a/views/products/womensware/womensware.ejs
+++ b/views/products/womensware/womensware.ejs
@@ -3,7 +3,7 @@
     <%- include('../../partials/head.ejs') %>
 <body>
     <%- include('../../partials/nav.ejs') %>
-    <center><h1>Women's Clothing</h1></center>
+    <h1>Women's Clothing</h1>
     <div class = 'directory-path'>
         <a href = '/'>Home</a> > <a href = '/products/womensware'>Womensware</a>
     </div>
