--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -7,7 +7,7 @@
                 <div class = 'col-md-1'><a href = '/products/items/<%=user.id%>' class = 'nav-item nav-link active' id='home-top-nav'>Profile</a></div>
                 <div class = 'col-md-1'><a href = '/login/logout' class = 'nav-item nav-link active' id='login-top-nav'>Logout</a></div>
                 <div class = 'col-md-1'><a href = '/products/new' class = 'nav-item nav-link active' id='signup-top-nav'>New</a></div>
-                <div class = 'col-md-1'><a href = '#' class = 'nav-item nav-link active' id='bag-top-nav'><img src = '../../images/icons8-buying-48.png' height='40' width='40'></a></div>
+                <div class = 'col-md-1'><a href = '#' class = 'nav-item nav-link active' id='bag-top-nav'><img src = '/images/icons8-buying-48.png' height='40' width='40'></a></div>
             </nav>
         </div>
     <%}%>
@@ -18,7 +18,7 @@
             <div class="col-md-6" ><input type="text" id="search-top-nav" size="60" placeholder="Search.."></div>
             <div class = 'col-md-1'><a href = '/login' class = 'nav-item nav-link active' id='login-top-nav'>Login</a></div>
             <div class = 'col-md-1'><a href = '/login/register' class = 'nav-item nav-link active' id='signup-top-nav'>Register</a></div>
-            <div class = 'col-md-1'><a href = '#' class = 'nav-item nav-link active' id='bag-top-nav'><img src = '../../images/icons8-buying-48.png' height='40' width='40'></a></div>
+            <div class = 'col-md-1'><a href = '#' class = 'nav-item nav-link active' id='bag-top-nav'><img src = '/images/icons8-buying-48.png' height='40' width='40'></a></div>
         </nav>
     </div>
     <%}%>
