--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -55,5 +55,6 @@
         </div>
         <button class="button is-link btn-primary btn-block mb-4">Sign In</button>
     -->
+    <%- include('../partials/footer.ejs') %>
 </body>
 </html>
