--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
 	<div class ="container-fluid">
 		<div class="row">
 			<div class="col-md-5 justify-content-start">
-				<p>Copyright &copy; 2021 Site name here</p>
+				<p>Copyright &copy; 2022 Marketplace</p>
 			</div>
 			<div class="col-md-6 justify-content-start">
 				<a id="myModal" class="text-dark">Terms of Use</a> 
