--- a/views/products/mensware/bottoms/menbottoms.ejs
+++ b/views/products/mensware/bottoms/menbottoms.ejs
@@ -7,11 +7,11 @@
     <div class = 'directory-path'>
         <a href = '/'>Home</a> > <a href = '/products/mensware'>Mensware</a> > Bottoms
     </div>
-    <div class = 'container-fluid' id="pics">
+    <div class = 'container-fluid'>
         <div class="row justify-content-start flex-wrap">
         <% for(let i = 0; i < Product.length; i++ ) { %>
                 <div class = 'col-sm-12 col-lg-2'><%= Product[i].name%><br />
-                    <a href="/products/<%=Product[i]._id%>"><img class = 'display-pics' src = '<%= Product[i].image %>'></a><br />
+                    <a href="/products/<%=Product[i]._id%>"><img class = 'img-thumbnail' src = '<%= Product[i].image %>'></a><br />
                 $<%= Product[i].price %></div>
                 <div class = 'col-sm-12 col-lg-1'></div>
         <% } %>
@@ -20,23 +20,3 @@
 </body>
 <%- include('../../../partials/footer.ejs') %>
 </html>
-
-
-
-
-
-
-
-
-
-
-    <!-- <div class = 'container-fluid' id="prices">
-        <div class="row justify-content-md-start">
-            <div class = 'col-sm-12 col-lg-1'></div>
-            <div class = 'col-sm-12 col-lg-2' id="price1">$20.99</div>
-            <div class = 'col-sm-12 col-lg-2' id="price1">$16.99</div>
-            <div class = 'col-sm-12 col-lg-2' id="price1">$16.99</div>
-            <div class = 'col-sm-12 col-lg-2' id="price1">$16.99</div>
-            <div class = 'col-sm-12 col-lg-1'></div>
-        </div>
-    </div> -->
