--- a/views/products/womensware/tops/womenstops.ejs
+++ b/views/products/womensware/tops/womenstops.ejs
@@ -7,7 +7,7 @@
     <div class = 'directory-path'>
         <a href = '/'>Home</a> > <a href = '/products/womensware'>Womensware</a> > Tops
     </div>
-    <div class = 'container-fluid' id="pics">
+    <div class = 'container-fluid'>
         <div class="row justify-content-start flex-wrap">
         <% for(let i = 0; i < Product.length; i++ ) { %>
                 <div class = 'col-sm-12 col-lg-2'><%= Product[i].name%><br />
