--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <%- include('../partials/head.ejs' ) %>
 
-  <body class="has-navbar-fixed-top">
+  <body>
     <%- include('../partials/nav.ejs') %>
     <section class="hero is-fullheight-with-navbar is-link">
       <div class="hero-body is-flex-direction-column">
@@ -50,5 +50,6 @@
       </div>
     </section>
     <main class="container is-max-widescreen"></main>
+    <%- include('../partials/footer.ejs') %>
   </body>
 </html>
