--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <%- include('../partials/head.ejs') %>
+    <link rel="stylesheet" href="/showPage.css">
 </head>
 <body>
     <%- include('../partials/nav.ejs') %>
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <img src="<%=Product.image%>">
+                <img class="productImage" src="<%=Product.image%>">
             </div>
             <div class="col-md-6">
                 <div class="row">
@@ -18,13 +19,13 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <span class="label label-primary"><%=Product.condition%></span>
-                        <span class="monospaced">No. <%=Product._id%></span>
+                        <span class="label label-primary">Condition: <%=Product.condition%></span>
+                        <!-- <span class="monospaced">No. <%=Product._id%></span> -->
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <p class="description"><%=Product.description%></p>
+                        <p class="description">Description: <%=Product.description%></p>
                     </div>
                 </div>
                 <div class="row">
@@ -36,11 +37,14 @@
                 <div class="row">
                     <div class="col-md-12">
                         <form action="/products/<%=Product._id%>/edit">
-                            <input type="submit" value="Edit">
+                            <input type="submit" value="Edit" class="btn btn-secondary">
                         </form>
+                        <br>
                         <form action="/products/<%=Product._id%>?_method=DELETE" method="POST">
-                            <input type="submit" value="Delete Item" />
+                            <input type="submit" value="Delete Item" class="btn btn-secondary">
                         </form>
+                        <br>
+                        <a href="/cart" target="_blank" class="btn btn-secondary">Add to Cart &raquo;</a>
                     </div>
                 </div>
                 <%}%>
