--- a/public/showPage.css
+++ b/public/showPage.css
@@ -3,3 +3,15 @@
     border-radius: 4px;
     padding: 5px;
 }
+
+.label {
+    margin:auto;
+}
+
+.description {
+    margin:auto;
+}
+
+.product-price {
+    margin:auto;
+}
