--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,10 +9,10 @@
             <div class="col-sm-12 col-md-4 justify-content-end">
                 <h2>Welcome</h2>
                 <p>The one-stop destination for buying, selling, and exploring fashion.</p>
-                <a href="/products" target="_blank" class="btn btn-primary">Start Shopping &raquo;</a>
+                <a href="/products" target="_blank" class="btn btn-secondary">Start Shopping &raquo;</a>
             </div>
             <div class = "col-sm-12 col-md-8 justify-content-end">
-                <img class="img-fluid" src="https://images.pexels.com/photos/7365335/pexels-photo-7365335.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Brand Image">
+                <img class="img-fluid" src="https://process.fs.grailed.com/qGiFggzVTfWzhrDNRN5Q" alt="Brand Image">
             </div>
         </div>
     </div>
@@ -22,13 +22,13 @@
         <hr>
             <br>
             <div class="row align-items-center h-100">
-                <div class = 'col-sm-12 col-md-3'><h4 class="text-center">Men's Tops</h4><a href="/products/mensware/tops"><img id="homeClothes" class="img-thumbnail" src="https://www.highsnobiety.com/static-assets/thumbor/MOAijOaUxHiF0_C25vn8STLMBQU=/1600x2000/www.highsnobiety.com/static-assets/wp-content/uploads/2022/02/25193908/aime-leon-dore-ss22-collection-lookbook-2.jpg" alt="Clothes A"></a>
+                <div class = 'col-sm-12 col-md-3'><h4 class="text-center">Men's Tops</h4><a href="/products/mensware/tops"><img id="homeClothes" class="img-thumbnail" src="https://freight.cargo.site/t/original/i/f5866d7d787319a9a54c8f7d57e64986cf7aa99693dd4bcc33b2a3ae814bbbc4/AIME_LEON_DORE_DAY_1-0157.jpg" alt="Clothes A"></a>
                 </div>
-                <div class = 'col-sm-12 col-md-3'><h4 class="text-center">Men's Bottoms</h4><a href="/products/mensware/bottoms"><img id="homeClothes" class="img-thumbnail" src="https://i.pinimg.com/736x/1b/39/82/1b39826a67a4c2fc8a4e031c02b85ef2.jpg" alt="Clothes B"></a>
+                <div class = 'col-sm-12 col-md-3'><h4 class="text-center">Men's Bottoms</h4><a href="/products/mensware/bottoms"><img id="homeClothes" class="img-thumbnail" src="https://d1jsygvae9sbou.cloudfront.net/images/origin/medium_25_ffab04f32d.jpg" alt="Clothes B"></a>
                 </div>
                 <div class = 'col-sm-12 col-md-3'><h4 class="text-center">Women's Tops</h4><a href="/products/womensware/tops"><img id="homeClothes" class="img-thumbnail" src="https://i.pinimg.com/736x/5a/ae/f2/5aaef2c17e97c1d159a8fc92274dfbe5.jpg" alt="Clothes C"></a>
                 </div>
-                <div class = 'col-sm-12 col-md-3'><h4 class="text-center">Women's Bottoms</h4><a href="/products/womensware/bottoms"><img id="homeClothes" class="img-thumbnail" src="https://i.pinimg.com/originals/a8/d8/98/a8d898000d65218c5e4b32a8eba777d8.jpg" alt="Clothes C"></a>
+                <div class = 'col-sm-12 col-md-3'><h4 class="text-center">Women's Bottoms</h4><a href="/products/womensware/bottoms"><img id="homeClothes" class="img-thumbnail" src="https://freight.cargo.site/t/original/i/123a827740f62c7d2ed3f98f4787cbd2d7c2b85cc36dd1a5b196bc4bb1dfc555/AIME_LEON_DORE_DAY_25775.jpg" alt="Clothes C"></a>
             </div> 
         </div>
     </div>
