--- a/public/main.css
+++ b/public/main.css
@@ -1,5 +1,5 @@
 footer {
-    background-color: white;
+    background-color: rgb(237, 234, 234);
 	position: fixed;
 	bottom: 0;
 	width: 100%;
@@ -7,7 +7,7 @@ footer {
   }
 
 body{
-	background-color: white;
+	background-color: rgb(209, 189, 164);
     font-family: 'PT Serif', serif;
     padding-top: 150px;
     padding-bottom: 50px;
