--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,10 +1,10 @@
 <footer>
 	<div class ="container-fluid">
 		<div class="row">
-			<div class="col-md-5 justify-content-start">
+			<div class="col-md-4 justify-content-start">
 				<p>Copyright &copy; 2022 Marketplace</p>
 			</div>
-			<div class="col-md-6 justify-content-start">
+			<div class="col-md-7 justify-content-center">
 				<a id="myModal" class="text-dark">Terms of Use</a> 
 				<span class="text-muted mx-2">|</span> 
 				<a href="#" class="text-dark">Privacy Policy</a>
