--- a/views/products/womensware/womensware.ejs
+++ b/views/products/womensware/womensware.ejs
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="stylesheet" href="/subcats.css">
     <%- include('../../partials/head.ejs') %>
-<body>
     <%- include('../../partials/nav.ejs') %>
-    <h1>Women's Clothing</h1>
+<body>
+    <img class="img-fluid" src="https://media.vogue.co.uk/photos/5ff59a2789a68f4c2d5df581/master/w_1600%2Cc_limit/Untitled-1-24.jpg"><br />
+    <h1 >Women's Clothing</h1>
     <div class = 'directory-path'>
-        <a href = '/'>Home</a> > <a href = '/products/womensware'>Womensware</a>
-    </div>
-    <div class = 'container-fluid' id="pics">
+        <a href = '/'>Home</a> > Womensware
+    </div><br />
+    <div class = 'container-fluid'>
         <div class="row justify-content-start flex-wrap">
         <% for(let i = 0; i < Product.length; i++ ) { %>
-                <div class = 'col-sm-12 col-lg-2'><%= Product[i].name%><br />
-                    <a href="/products/<%=Product[i]._id%>"><img class = 'display-pics' src = '<%= Product[i].image %>'><br />
-                    $<%= Product[i].price %>
-                    </a>
+                <div class = 'col-sm-12 col-lg-2' id='plates'>
+                    <button class="btn btn-outline-dark" id="name-bor"><%= Product[i].name%></button><br />
+                    <a href="/products/<%=Product[i]._id%>"><img class = 'img-thumbnail' id='' src = '<%= Product[i].image %>'></a><br />
+                    <img class = 'stars' src = 'https://upload.wikimedia.org/wikipedia/commons/b/b9/Star_rating_4.5_of_5.png' width='100' length='100'><br />
+                    <div class = 'bottom'>
+                        <button class="btn btn-outline-dark" id="price">$<%= Product[i].price %></button><button class = 'btn btn-dark '>Add to Cart</button>
+                    </div>
                 </div>
                 <div class = 'col-sm-12 col-lg-1'></div>
         <% } %>
         </div>
     </div>
-    <%- include('../../partials/footer.ejs') %>
 </body>
+<%- include('../../partials/footer.ejs') %>
 </html>
