--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -9,7 +9,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <img class="productImage" src="<%=Product.image%>">
+                <img class="productImage img-fluid" src="<%=Product.image%>">
             </div>
             <div class="col-md-6">
                 <div class="row">
