--- a/views/products/useritems.ejs
+++ b/views/products/useritems.ejs
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="stylesheet" href="/subcats.css">
     <%- include('../partials/head.ejs') %>
-<body>
     <%- include('../partials/nav.ejs') %>
-    <h1>User's Products</h1>
-    <div class = 'container-fluid' id="pics">
+<body>
+    <img class="img-fluid" src="https://i0.wp.com/cultedge.com/wp-content/uploads/2017/01/Aim%C3%A9-Leon-Dore-FW17-Preview-1.jpg"><br />
+    <h1 ><%=user.username%> Clothing</h1>
+    <div class = 'container-fluid'>
         <div class="row justify-content-start flex-wrap">
         <% for(let i = 0; i < Product.length; i++ ) { %>
-                <div class = 'col-sm-12 col-lg-2'><%= Product[i].name%><br />
-                    <a href="/products/<%=Product[i]._id%>"><img class = 'display-pics' src = '<%= Product[i].image %>'><br />
-                    $<%= Product[i].price %>
-                    </a>
+                <div class = 'col-sm-12 col-lg-2' id='plates'>
+                    <button class="btn btn-outline-dark" id="name-bor"><%= Product[i].name%></button><br />
+                    <a href="/products/<%=Product[i]._id%>"><img class = 'img-thumbnail' id='' src = '<%= Product[i].image %>'></a><br />
+                    <img class = 'stars' src = 'https://upload.wikimedia.org/wikipedia/commons/b/b9/Star_rating_4.5_of_5.png' width='100' length='100'><br />
+                    <div class = 'bottom'>
+                        <button class="btn btn-outline-dark" id="price">$<%= Product[i].price %></button>
+                    </div>
                 </div>
                 <div class = 'col-sm-12 col-lg-1'></div>
         <% } %>
         </div>
     </div>
-    <%- include('../partials/footer.ejs') %>
 </body>
+<%- include('../partials/footer.ejs') %>
 </html>
