--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,8 +3,9 @@
     <%- include('partials/head.ejs') %>
     <link rel="stylesheet" href="../homePage.css">
 <body>
+
     <%- include('partials/nav.ejs') %>
-    <div class="container-fluid"> 
+    <div class="container-fluid" id="flexscr"> 
         <div class="row align-items-center h-100">
             <div class="col-sm-12 col-md-4 justify-content-end">
                 <h2>Welcome</h2>
