Fixing some minor issues with footer/mensware/womensware.ejs

--- a/views/products/mensware/mensware.ejs
+++ b/views/products/mensware/mensware.ejs
@@ -5,7 +5,7 @@
     <%- include('../../partials/nav.ejs') %>
 <body>
     <h1 >Men's Clothing</h1>
-    <img src="https://images.complex.com/complex/image/upload/c_fill,dpr_auto,f_auto,fl_lossy,g_face,q_auto,w_1280/hijzsivcpq1rmcv3qbas.jpg"><br />
+    <center><img src="https://images.complex.com/complex/image/upload/c_fill,dpr_auto,f_auto,fl_lossy,g_face,q_auto,w_1280/hijzsivcpq1rmcv3qbas.jpg"></center><br />
     <div class = 'directory-path'>
         <a href = '/'>Home</a> > Mensware
     </div><br />
