--- a/views/products/womensware/womensware.ejs
+++ b/views/products/womensware/womensware.ejs
@@ -4,7 +4,7 @@
     <%- include('../../partials/head.ejs') %>
     <%- include('../../partials/nav.ejs') %>
 <body>
-    <img class="img-fluid" src="https://media.vogue.co.uk/photos/5ff59a2789a68f4c2d5df581/master/w_1600%2Cc_limit/Untitled-1-24.jpg"><br />
+    <center><img class="img-fluid" src="https://media.vogue.co.uk/photos/5ff59a2789a68f4c2d5df581/master/w_1600%2Cc_limit/Untitled-1-24.jpg"></center><br />
     <h1 >Women's Clothing</h1>
     <div class = 'directory-path'>
         <a href = '/'>Home</a> > Womensware
