--- a/views/products/mensware/mensware.ejs
+++ b/views/products/mensware/mensware.ejs
@@ -8,7 +8,7 @@
     <center><img src="https://images.complex.com/complex/image/upload/c_fill,dpr_auto,f_auto,fl_lossy,g_face,q_auto,w_1280/hijzsivcpq1rmcv3qbas.jpg"></center><br />
     <div class = 'directory-path'>
         <a href = '/'>Home</a> > Mensware
-    </div><br />
+    </div><hr>
     <div class = 'container-fluid'>
         <div class="row justify-content-start flex-wrap">
         <% for(let i = 0; i < Product.length; i++ ) { %>
