--- a/views/products/mensware/tops/menstops.ejs
+++ b/views/products/mensware/tops/menstops.ejs
@@ -7,7 +7,7 @@
     <h1><img src="https://cdn.discordapp.com/attachments/955541749516890142/970716360680288315/unknown.png"></h1><br />
     <div class = 'directory-path'>
         <a href = '/'>Home</a> > <a href = '/products/mensware'>Mensware</a> > Tops
-    </div><br />
+    </div><hr>
     <div class = 'container-fluid'>
         <div class="row justify-content-start flex-wrap">
         <% for(let i = 0; i < Product.length; i++ ) { %>
