--- a/views/products/womensware/bottoms/womenbottoms.ejs
+++ b/views/products/womensware/bottoms/womenbottoms.ejs
@@ -7,7 +7,7 @@
     <h1 class = 'gfx-1'><img src="https://cdn.discordapp.com/attachments/955541749516890142/970716921014128660/unknown.png"></h1><br />
     <div class = 'directory-path'>
         <a href = '/'>Home</a> > <a href = '/products/womensware'>Womensware</a> > Bottoms
-    </div><br />
+    </div><hr>
     <div class = 'container-fluid'>
         <div class="row justify-content-start flex-wrap">
         <% for(let i = 0; i < Product.length; i++ ) { %>
