--- a/views/products/womensware/womensware.ejs
+++ b/views/products/womensware/womensware.ejs
@@ -8,7 +8,7 @@
     <h1 >Women's Clothing</h1>
     <div class = 'directory-path'>
         <a href = '/'>Home</a> > Womensware
-    </div><br />
+    </div><hr>
     <div class = 'container-fluid'>
         <div class="row justify-content-start flex-wrap">
         <% for(let i = 0; i < Product.length; i++ ) { %>
